--- a/source/photo.html
+++ b/source/photo.html
@@ -9,229 +9,166 @@
 </head>
 
 <body>
-  <div class="content">
-    <header class="page-header">
-      <div class="wrapper">
-        <nav class="main-nav main-nav--opened">
-          <div class="logo-wrapper">
-            <a class="page-header__logo">
-              <picture>
-                <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
-                <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-                <img src="img/logo-pink-white-mobile.svg" t alt="Логотип Pink»">
-              </picture>
-            </a>
-          </div>
-          <button class="main-nav__toggle" type="button"></button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a>Фотографии</a>
-              </li>
-              <li class="site-list__item">
-                <a href="form.html">Конкурс</a>
-              </li>
-              <li class="site-list__item">
-                <a href="#">HTML Academy</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+  <header class="page-header">
+    <nav class="main-nav">
+      <div class="logo-wrapper">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="http://placehold.it/100x50" width="" height="" alt="Pink">
+        </a>
       </div>
-    </header>
-    <div class="content__photo photo">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a>Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="page-header__photo photo">
       <div class="photo__wrapper-image">
-        <h1 class="content__title">Фотографии пользователей</h1>
+        <h1 class="page-header__title">Фотографии пользователей</h1>
       </div>
     </div>
-  </div>
 
+  </header>
   <main class="page-main">
     <section class="photo-gallery">
       <div class="photo-gallery__agitation agitation">
-        <p class="agitation__text">Взгляните на фотографии, которые выкладывают пользователи!<br>Видите, как не хватает
-          ваших?
+        <p class="agitation__text">Взгяните на фотографии, которые выкладывают пользователи!<br>
+          Видите, как не хватает ваших?
         </p>
       </div>
       <div class=" user-photo user-photo--panorama">
         <div class="user-photo__item">
           <div class="user-photo__picture">
-            <picture>
-              <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg">
-              <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg">
-              <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" alt="Панорама дня">
-            </picture>
+
+            <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" width="" height=""
+              alt="Панорама дня">
             <p class="user-photo__name">Панорама дня</p>
           </div>
           <div class="user-photo__comment user-photo__comment-panorama">
-            <div class="user-photo__comment-wrapper">
-              <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
-              <p class="comment__user-message">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую
-                трансляцию в
-                перископе, задавайте свои вопросы!</p>
-              <span class="comment__user-likes--panorama"></span>
-              <span class="comment__user-likes-sum comment__user-likes-sum--panorama">Нравится: 215</span>
-            </div>
+            <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
+            <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
+              трансляцию в
+              перископе, задавайте свои вопросы!</p>
+            <span class="comment__user-likes"></span>
+            <span class="comment__user-likes-sum">Нравится: 215</span>
           </div>
         </div>
       </div>
-      <div class="wrapper">
-        <div class="page-main__wrapper">
-          <div class="user-photo">
-            <div class="user-photo__item">
-              <div class="user-photo__picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg">
-                  <img class="page-main__logo-image" src="img/photo-car-mobile@1x.jpg" width="" height=""
-                    alt="Панорама дня">
-                </picture>
-              </div>
-              <div class="user-photo__comment comment">
-                <div class="user-photo__comment-wrapper">
-                  <p class="comment__user-name">Левон <span class="comment__time">(5 часов назад)</span></p>
-                  <p class="comment__user-message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-                  <span class="comment__user-likes"></span>
-                  <span class="comment__user-likes-sum">Нравится: 356</span>
-                </div>
-              </div>
+      <div class="page-main__wrapper">
+        <div class="user-photo">
+          <div class="user-photo__item">
+            <div class="user-photo__picture">
+              <img class="page-main__logo-image" src="../img/photo-car-mobile@1x.jpg" width="" height=""
+                alt="Панорама дня">
             </div>
-          </div>
-          <div class="user-photo">
-            <div class="user-photo__item">
-              <div class="user-photo__picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg">
-                  <img class="page-main__logo-image" src="img/photo-drumset-mobile@1x.jpg" width="" height=""
-                    alt="Панорама дня">
-                </picture>
-              </div>
-              <div class="user-photo__comment comment">
-                <div class="user-photo__comment-wrapper">
-                  <p class="comment__user-name">Антон <span class="comment__time">(12 часов назад)</span></p>
-                  <p class="comment__user-message">Соседи будут рады!</p>
-                  <span class="comment__user-likes"></span>
-                  <span class="comment__user-likes-sum">Нравится: 666</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-photo">
-            <div class="user-photo__item">
-              <div class="user-photo__picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg">
-                  <img class="page-main__logo-image" src="img/photo-window-mobile@1x.jpg" width="" height=""
-                    alt="Панорама дня">
-                </picture>
-              </div>
-              <div class="user-photo__comment comment">
-                <div class="user-photo__comment-wrapper">
-                  <p class="comment__user-name">Борис <span class="comment__time">(20 часов назад)</span></p>
-                  <p class="comment__user-message"> Здесь могла быть ваша цитата о высоком и вечном</p>
-                  <span class="comment__user-likes"></span>
-                  <span class="comment__user-likes-sum">Нравится: 215</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-photo">
-            <div class="user-photo__item">
-              <div class="user-photo__picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg">
-                  <img class="page-main__logo-image" src="img/photo-fair-mobile@1x.jpg" width="" height=""
-                    alt="Панорама дня">
-                </picture>
-              </div>
-              <div class="user-photo__comment comment">
-                <div class="user-photo__comment-wrapper">
-                  <p class="comment__user-name">Сергей <span class="comment__time">(25 часов назад)</span></p>
-                  <p class="comment__user-message">Самая кубанская в мире!</p>
-                  <span class="comment__user-likes"></span>
-                  <span class="comment__user-likes-sum">Нравится: 4</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-photo">
-            <div class="user-photo__item">
-              <div class="user-photo__picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg">
-                  <img class="page-main__logo-image" src="img/photo-pov-mobile@1x.jpg" width="" height=""
-                    alt="Панорама дня">
-                </picture>
-              </div>
-              <div class="user-photo__comment comment">
-                <div class="user-photo__comment-wrapper">
-                  <p class="comment__user-name">Максим <span class="comment__time">(40 часов назад)</span></p>
-                  <p class="comment__user-message">Где снег-то?</p>
-                  <span class="comment__user-likes"></span>
-                  <span class="comment__user-likes-sum">Нравится: 150</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="user-photo">
-            <div class="user-photo__item">
-              <div class="user-photo__picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg">
-                  <img class="page-main__logo-image" src="img/photo-wing-mobile@1x.jpg" width="" height=""
-                    alt="Панорама дня">
-                </picture>
-              </div>
-              <div class="user-photo__comment comment">
-                <div class="user-photo__comment-wrapper">
-                  <p class="comment__user-name">Надежда <span class="comment__time">(45 часов назад)</span></p>
-                  <p class="comment__user-message">Всем GM и взаимные лайки!</p>
-                  <span class="comment__user-likes"></span>
-                  <span class="comment__user-likes-sum">Нравится: 2560</span>
-                </div>
-              </div>
+            <div class="user-photo__comment comment">
+              <p class="comment__user-name">Левон <span class="comment__time">(5 часов назад)</span></p>
+              <p class="comment__user-message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+              <span class="user-likes"></span>
+              <span class="user-likes-sum">Нравится: 356</span>
             </div>
           </div>
         </div>
+        <div class="user-photo">
+          <div class="user-photo__item">
+            <div class="user-photo__picture">
+              <img class="page-main__logo-image" src="../img/photo-drumset-mobile@1x.jpg" width="" height=""
+                alt="Панорама дня">
+            </div>
+            <div class="user-photo__comment comment">
+              <p class="comment__user-name">Антон <span class="comment__time">(12 часов назад)</span></p>
+              <p class="comment__user-message">Соседи будут рады!</p>
+              <span class="user-likes"></span>
+              <span class="user-likes-sum">Нравится: 666</span>
+            </div>
+          </div>
+        </div>
+        <div class="user-photo">
+          <div class="user-photo__item">
+            <div class="user-photo__picture">
+              <img class="page-main__logo-image" src="../img/photo-window-mobile@1x.jpg" width="" height=""
+                alt="Панорама дня">
+            </div>
+            <div class="user-photo__comment comment">
+              <p class="comment__user-name">Борис <span class="comment__time">(20 часов назад)</span></p>
+              <p class="comment__user-message"> Здесь могла быть ваша цитата о высоком и вечном</p>
+              <span class="user-likes"></span>
+              <span class="user-likes-sum">Нравится: 215</span>
+            </div>
+          </div>
+        </div>
+        <div class="user-photo">
+          <div class="user-photo__item">
+            <div class="user-photo__picture">
+              <img class="page-main__logo-image" src="../img/photo-fair-mobile@1x.jpg" width="" height=""
+                alt="Панорама дня">
+            </div>
+            <div class="user-photo__comment comment">
+              <p class="comment__user-name">Сергей <span class="comment__time">(25 часов назад)</span></p>
+              <p class="comment__user-message">Самая кубанская в мире!</p>
+              <span class="user-likes"></span>
+              <span class="user-likes-sum">Нравится: 4</span>
+            </div>
+          </div>
+        </div>
+        <div class="user-photo">
+          <div class="user-photo__item">
+            <div class="user-photo__picture">
+              <img class="page-main__logo-image" src="../img/photo-pov-mobile@1x.jpg" width="" height=""
+                alt="Панорама дня">
+            </div>
+            <div class="user-photo__comment comment">
+              <p class="comment__user-name">Максим <span class="comment__time">(40 часов назад)</span></p>
+              <p class="comment__user-message">Где снег-то?</p>
+              <span class="user-likes"></span>
+              <span class="user-likes-sum">Нравится: 150</span>
+            </div>
+          </div>
+        </div>
+        <div class="user-photo">
+          <div class="user-photo__item">
+            <div class="user-photo__picture">
+              <img class="page-main__logo-image" src="../img/photo-wing-mobile@1x.jpg" width="" height=""
+                alt="Панорама дня">
+            </div>
+            <div class="user-photo__comment comment">
+              <p class="comment__user-name">Надежда <span class="comment__time">(45 часов назад)</span></p>
+              <p class="comment__user-message">Всем GM и взаимные лайки!</p>
+              <span class="user-likes"></span>
+              <span class="user-likes-sum">Нравится: 2560</span>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-        <picture>
-          <source media="(min-width: 960px)" srcset="./img/logo-pink-blue-desktop.svg">
-          <source media="(min-width: 660px)" srcset="./img/logotype-blue-tablet.svg">
-          <img src="./img/logo-pink-blue-mobile.svg" alt="Логотип Pink»">
-        </picture>
+        <a class="page-footer__logo-image "></a>
       </div>
       <div class="page-footer__social-links social-links">
-        <a class="social-links__item social-links__item--tw" href="https://twitter.com/"></a>
-        <a class="social-links__item social-links__item--fb" href="https://www.facebook.com/"></a>
-        <a class="social-links__item social-links__item--video" href="https://www.youtube.com/"></a>
+        <a class="social-links__item social-links__item--tw" href="#">Тв</a>
+        <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
+        <a class="social-links__item social-links__item--video" href="#">Видео</a>
       </div>
       <div class="page-footer__develop">
-          <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
-            <span>Разработано</span>
-            <svg class="page-footer__develop-link-icon" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
-              xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
-              xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-              xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" viewBox="0 0 50 60" version="1.1" id="svg4"
-              sodipodi:docname="htmlacademy.svg" width="100%" height="100%">
-              <path
-                d="M 25.253807,0.7898051 H 25.000001 L 0,3.2457634 V 45.581805 L 25.000001,59.265 50,45.581805 V 3.2457634 Z M 46.827412,43.827548 25.000001,55.756489 3.1725892,43.827548 V 26.518891 l 21.7005098,11.92894 v 2.105104 L 10.025381,32.366411 v 2.105106 l 14.97462,8.303477 v 2.222058 l -14.97462,-8.186526 v 2.105106 l 14.97462,8.18653 15.101523,-8.303482 v -8.888227 l 6.725888,-3.742415 z m -0.126905,-19.881566 -5.964466,3.27461 -2.791877,1.520357 -13.071065,-7.133974 v 2.105108 l 11.167512,6.19837 h -0.126905 l -0.253807,0.11695 -1.649746,0.818652 -9.26396,-5.028867 v 2.105109 l 7.360406,3.97631 -1.776648,1.052554 -5.456852,-3.040708 v 2.105105 L 28.5533,34.003716 24.873099,35.991872 3.2994924,24.179882 24.873099,12.250943 Z M 46.827412,21.840876 24.873099,9.911936 3.1725892,21.840876 V 5.9356221 L 25.000001,3.8305154 46.827412,5.9356221 Z"
-                id="path2" style="fill:#2e368f;stroke-width:1.21825361" />
-            </svg>
-          </a>
-        </div>
+        <a class="page-footer__develop-link" href="#">Разработано</a>
+      </div>
+    </div>
   </footer>
 </body>
 
