--- a/source/index.html
+++ b/source/index.html
@@ -63,6 +63,7 @@
       </div>
     </section>
   </div>
+
   <main class="page-main">
     <section class="offer">
       <h1 class="visually-hidden">Приложение Pink</h1>
@@ -100,27 +101,25 @@
           </div>
         </div>
       </div>
-      <div class="offer__wrapper-time time">
-        <div class="wrapper">
-          <div class="offer__opportunity offer__opportunity--time">
-            <div class="opportunity opportunity--time">
-              <h3 class="opportunity__item-head opportunity__item-head--time">Эффект<br class="offer__opportunity-gap">
-                на
-                24 часа!</h3>
-              <p class="opportunity__item-body opportunity__item-body--time">Британские ученые провели исследование и
-                доказали,
-                что положительный эффект от использования приложения длится целые сутки!
-              </p>
-              <a class="opportunity__link" href="#">Узнать больше об исследовании</a>
-            </div>
-            <div class="offer__opportunity-image">
-              <svg class="offer__opportunity-image-time" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="298px" height="345.097px"
-                viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve">
-                <path fill="#dedede"
-                  d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z" />
-              </svg>
-            </div>
+      <div class="wrapper">
+        <div class="offer__opportunity offer__opportunity--time">
+          <div class="opportunity opportunity--time">
+            <h3 class="opportunity__item-head opportunity__item-head--time">Эффект<br class="offer__opportunity-gap">
+              на
+              24 часа!</h3>
+            <p class="opportunity__item-body opportunity__item-body--time">Британские ученые провели исследование и
+              доказали,
+              что положительный эффект от использования приложения длится целые сутки!
+            </p>
+            <a class="opportunity__link" href="#">Узнать больше об исследовании</a>
+          </div>
+          <div class="offer__opportunity-image">
+            <svg class="offer__opportunity-image-time" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="298px" height="345.097px"
+              viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve">
+              <path fill="#dedede"
+                d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z" />
+            </svg>
           </div>
         </div>
       </div>
@@ -170,7 +169,7 @@
       </div>
       <div class="page-footer__develop">
         <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
-          Разработано
+          <span>Разработано</span>
           <svg class="page-footer__develop-link-icon" xmlns:dc="http://purl.org/dc/elements/1.1/"
             xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
             xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
